updating the index

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <link href='https://api.mapbox.com/mapbox-gl-js/v0.53.0/mapbox-gl.css' rel='stylesheet' />
 
     <!-- Theme CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link rel="stylesheet" href="./assets/css/theme.min.css">
     <link rel="stylesheet" href="./style.css">
 
@@ -45,77 +46,49 @@
     </div>
 
     <div class="container">
+      <div class="row row-cols-2">
 
-      <div class="row row-cols-1 row-cols-md-2">
-
-        <div class="shadow-sm sm-6 mb-5 p-3 bg-white rounded">
         <a href="getgom.com">
-        <div class="col sm-6">
-          <div class="card" style="padding-top: 15px;">
-            <img src="./assets/img/products/gom@4x.png" class="card-img-top" style="width: 56px;">
-            <div class="card-body">
-              <h5 class="display-4">Gom</h5>
-              <p class="card-text">
-                For a one-click VPN to bypass blocked websites
-              </p>
-            </div>
+        <div class="col p-3 sm-6 bg-white" style="padding-top: 15px;">
+          <div class="card card-p3">
+          <img src="./assets/img/products/gom@4x.png" style="width: 56px;">
+          <h5 class="display-4">Gom</h5>
+          <p class="card-text">For a one-click VPN to bypass blocked websites</p>
           </div>
+        </div>
         </a>
-        </div>
-      </div>
 
-        <div class="shadow-sm sm-6 mb-5 p-3 bg-white rounded">
         <a href="accountgram.com">
-        <div class="col sm-6">
-          <div class="card" style="padding-top: 15px;">
-            <img src="./assets/img/products/accountgram@4x.png" class="card-img-top" style="width: 64px;">
-            <div class="card-body">
-              <h5 class="display-4">Accountgram</h5>
-              <p class="card-text">
-                For receipt backups with a Telegram Chatbot
-              </p>
-            </div>
+        <div class="col p-3 sm-6 bg-white" style="padding-top: 15px;">
+          <div class="card card-p3">
+          <img src="./assets/img/products/accountgram@4x.png" style="width: 64px;">
+          <h5 class="display-4">Accountgram</h5>
+          <p class="card-text">For receipt backups with a Telegram Chatbot</p>
           </div>
-          </a>
         </div>
-      </div>
-    </div>
+        </a>
 
-    <div class="row row-cols-1 row-cols-md-2">
-
-        <div class="shadow-sm sm-6 mb-5 p-3 bg-white rounded">
         <a href="giki.wiki">
-        <div class="col sm-6">
-          <div class="card" style="padding-top: 15px;">
-            <img src="./assets/img/products/giki@4x.png" class="card-img-top" style="width: 64px;">
-            <div class="card-body">
-              <h5 class="display-4">Giki</h5>
-              <p class="card-text">
-                For a Markdown-based Wiki
-              </p>
-            </div>
-          </div>
-          </a>
-        </div>
-        </div>
-
-        <div class="shadow-sm sm-6 mb-5 p-3 bg-white rounded">
-          <a href="nubela.co/proxycurl">
-          <div class="col sm-6">
-            <div class="card" style="padding-top: 15px;">
-              <img src="./assets/img/products/proxycurl@4x.png" class="card-img-top" style="width: 96px;">
-              <div class="card-body">
-                <h5 class="display-4">ProxyCurl</h5>
-                <p class="card-text">
-                  For crawling the web without being blocked
-                </p>
-              </div>
-            </div>
-            </a>
+        <div class="col p-3 sm-6 bg-white" style="padding-top: 15px;">
+          <div class="card card-p3">
+          <img src="./assets/img/products/giki@4x.png" style="width: 64px;">
+          <h5 class="display-4">Giki</h5>
+          <p class="card-text">For a Markdown-based Wiki</p>
           </div>
         </div>
+        </a>
         
-      </div>
+        <a href="nubela.co/proxycurl">
+        <div class="col p-3 sm-6 bg-white" style="padding-top: 15px;">
+          <div class="card card-p3">
+          <img src="./assets/img/products/proxycurl@4x.png" style="width: 96px;">
+          <h5 class="display-4">ProxyCurl</h5>
+          <p class="card-text">For crawling the web without being blocked</p>
+          </div>
+        </div>
+        </a>
+
+
       </div>
     </div>
 
@@ -147,6 +120,9 @@
     <script src='https://api.mapbox.com/mapbox-gl-js/v0.53.0/mapbox-gl.js'></script>
 
     <!-- Theme JS -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
     <script src="./assets/js/theme.min.js"></script>
 
 
