--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
   <body>
 
     <div class="mx-auto" style="width: 156px; height: auto;">
+      <a href="nubela.co">
       <img src="./assets/img/Nubela_logo.png" class="img-fluid" alt="Responsive image">
+      </a> 
     </div>
 
     <p class="h4">Automating everything menial</p>
@@ -49,7 +51,7 @@
       <div class="row row-cols-2">
 
         <a href="getgom.com">
-        <div class="col p-3 sm-6 bg-white" style="padding-top: 15px;">
+        <div class="col p-6 sm-6 bg-white" style="padding-top: 15px;">
           <div class="card card-p3">
           <img src="./assets/img/products/gom@4x.png" style="width: 56px;">
           <h5 class="display-4">Gom</h5>
@@ -59,7 +61,7 @@
         </a>
 
         <a href="accountgram.com">
-        <div class="col p-3 sm-6 bg-white" style="padding-top: 15px;">
+        <div class="col p-6 sm-6 bg-white" style="padding-top: 15px;">
           <div class="card card-p3">
           <img src="./assets/img/products/accountgram@4x.png" style="width: 64px;">
           <h5 class="display-4">Accountgram</h5>
@@ -69,7 +71,7 @@
         </a>
 
         <a href="giki.wiki">
-        <div class="col p-3 sm-6 bg-white" style="padding-top: 15px;">
+        <div class="col p-6 sm-6 bg-white" style="padding-top: 15px;">
           <div class="card card-p3">
           <img src="./assets/img/products/giki@4x.png" style="width: 64px;">
           <h5 class="display-4">Giki</h5>
@@ -79,7 +81,7 @@
         </a>
         
         <a href="nubela.co/proxycurl">
-        <div class="col p-3 sm-6 bg-white" style="padding-top: 15px;">
+        <div class="col p-6 sm-6 bg-white" style="padding-top: 15px;">
           <div class="card card-p3">
           <img src="./assets/img/products/proxycurl@4x.png" style="width: 96px;">
           <h5 class="display-4">ProxyCurl</h5>
