ready for review

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <div class="container">
       <div class="row row-cols-2">
 
-        <a href="getgom.com">
+        <a href="https://getgom.com">
         <div class="col p-6 sm-6 bg-white" style="padding-top: 15px;">
           <div class="card card-p3">
           <img src="./assets/img/products/gom@4x.png" style="width: 56px;">
@@ -60,7 +60,7 @@
         </div>
         </a>
 
-        <a href="accountgram.com">
+        <a href="https://accountgram.com">
         <div class="col p-6 sm-6 bg-white" style="padding-top: 15px;">
           <div class="card card-p3">
           <img src="./assets/img/products/accountgram@4x.png" style="width: 64px;">
@@ -70,7 +70,7 @@
         </div>
         </a>
 
-        <a href="giki.wiki">
+        <a href="https://giki.wiki">
         <div class="col p-6 sm-6 bg-white" style="padding-top: 15px;">
           <div class="card card-p3">
           <img src="./assets/img/products/giki@4x.png" style="width: 64px;">
@@ -80,7 +80,7 @@
         </div>
         </a>
         
-        <a href="nubela.co/proxycurl">
+        <a href="https://nubela.co/proxycurl">
         <div class="col p-6 sm-6 bg-white" style="padding-top: 15px;">
           <div class="card card-p3">
           <img src="./assets/img/products/proxycurl@4x.png" style="width: 96px;">
