--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <body>
 
     <div class="mx-auto" style="width: 156px; height: auto;">
-      <a href="nubela.co">
+      <a href="https://nubela.co">
       <img src="./assets/img/Nubela_logo.png" class="img-fluid" alt="Responsive image">
       </a> 
     </div>
