--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     </div>
 
     <div class="container">
-      <div class="row row-cols-2">
+      <div class="row row-cols-1 row-cols-md-2">
 
         <a href="https://getgom.com">
         <div class="col p-6 sm-6 bg-white" style="padding-top: 15px;">
