fix the responsive on the content page

--- a/index.html
+++ b/index.html
@@ -130,16 +130,16 @@
 
   </body>
 
-<footer>
+<footer class="page-footer font-small blue pt-4 pb-4 bg-light mt-5">
 <div class="container">
-  <div class="row justify-content-between">
+  <div class="row justify-content-between ">
 
-    <div class="col-4">
+    <div class="col-4 col md-y mt-md-0 mt-3">
         <p class="navbar-footer">Nubela Pte ltd</p>
         <p class="navbar-footer-sub">6 Harper Road #02-07 Singapore 369674</p>
     </div>
 
-    <div class="col-4">
+    <div class="col-4 col md-y mt-md-0 mt-3">
       <a href="mailto:hello@nubela.co">
         <p class="navbar-footer-email">
           Email us
