--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
               </a>
               <div class="dropdown-menu dropdown-menu-md" aria-labelledby="navbarDocumentation">
                 <div class="list-group list-group-flush">
-                  <a class="list-group-item" href="./docs/index.html">
+                  <a class="list-group-item" href="people-linkedin-profile.html">
 
                     <!-- Icon -->
                     <div class="icon icon-sm text-primary">
@@ -84,7 +84,7 @@
                     </div>
 
                   </a>
-                  <a class="list-group-item" href="./docs/alerts.html">
+                  <a class="list-group-item" href="company-linkedin-profile.html">
 
                     <!-- Icon -->
                     <div class="icon icon-sm text-primary">
@@ -107,7 +107,7 @@
                     </div>
 
                   </a>
-                  <a class="list-group-item" href="./docs/changelog.html">
+                  <a class="list-group-item" href="jobs-linkedin-profile.html">
 
                     <!-- Icon -->
                     <div class="icon icon-sm text-primary">
@@ -215,7 +215,7 @@
           <div class="col-6">
             <!-- Icon -->
             <div class="icon text-primary mb-3">
-              <svg width="24" height="24" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><g fill="none" fill-rule="evenodd"><path d="M0 0h24v24H0z"></path><path d="M7 3h10a4 4 0 110 8H7a4 4 0 110-8zm0 6a2 2 0 100-4 2 2 0 000 4z" fill="#335EEA"></path><path d="M7 13h10a4 4 0 110 8H7a4 4 0 110-8zm10 6a2 2 0 100-4 2 2 0 000 4z" fill="#335EEA" opacity=".3"></path></g></svg>
+              <i class="neu-scan-barcode" style="font-size: 40px;"></i>
             </div>
 
             <!-- Heading -->
@@ -231,7 +231,7 @@
           <div class="col-6">
             <!-- Icon -->
             <div class="icon text-primary mb-3">
-              <svg width="24" height="24" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><g fill="none" fill-rule="evenodd"><path d="M0 0h24v24H0z"></path><path d="M5.5 4h4A1.5 1.5 0 0111 5.5v1A1.5 1.5 0 019.5 8h-4A1.5 1.5 0 014 6.5v-1A1.5 1.5 0 015.5 4zm9 12h4a1.5 1.5 0 011.5 1.5v1a1.5 1.5 0 01-1.5 1.5h-4a1.5 1.5 0 01-1.5-1.5v-1a1.5 1.5 0 011.5-1.5z" fill="#335EEA"></path><path d="M5.5 10h4a1.5 1.5 0 011.5 1.5v7A1.5 1.5 0 019.5 20h-4A1.5 1.5 0 014 18.5v-7A1.5 1.5 0 015.5 10zm9-6h4A1.5 1.5 0 0120 5.5v7a1.5 1.5 0 01-1.5 1.5h-4a1.5 1.5 0 01-1.5-1.5v-7A1.5 1.5 0 0114.5 4z" fill="#335EEA" opacity=".3"></path></g></svg>
+              <i class="neu-nat" style="font-size: 40px;"></i>
             </div>
 
             <!-- Heading -->
@@ -249,7 +249,7 @@
           <div class="col-6">
             <!-- Icon -->
             <div class="icon text-primary mb-3">
-              <svg width="24" height="24" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><g fill="none" fill-rule="evenodd"><path d="M0 0h24v24H0z"></path><path d="M17.272 8.685a1 1 0 111.456-1.37l4 4.25a1 1 0 010 1.37l-4 4.25a1 1 0 01-1.456-1.37l3.355-3.565-3.355-3.565zm-10.544 0L3.373 12.25l3.355 3.565a1 1 0 01-1.456 1.37l-4-4.25a1 1 0 010-1.37l4-4.25a1 1 0 011.456 1.37z" fill="#335EEA"></path><rect fill="#335EEA" opacity=".3" transform="rotate(15 12 12)" x="11" y="4" width="2" height="16" rx="1"></rect></g></svg>
+              <i class="neu-data-quality" style="font-size: 40px;"></i>
             </div>
 
             <!-- Heading -->
@@ -266,7 +266,7 @@
           <div class="col-6">
             <!-- Icon -->
             <div class="icon text-primary mb-3">
-              <svg width="24" height="24" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><g fill="none" fill-rule="evenodd"><path d="M0 0h24v24H0z"></path><path d="M17.272 8.685a1 1 0 111.456-1.37l4 4.25a1 1 0 010 1.37l-4 4.25a1 1 0 01-1.456-1.37l3.355-3.565-3.355-3.565zm-10.544 0L3.373 12.25l3.355 3.565a1 1 0 01-1.456 1.37l-4-4.25a1 1 0 010-1.37l4-4.25a1 1 0 011.456 1.37z" fill="#335EEA"></path><rect fill="#335EEA" opacity=".3" transform="rotate(15 12 12)" x="11" y="4" width="2" height="16" rx="1"></rect></g></svg>
+              <i class="neu-statistic-up" style="font-size: 40px;"></i>
             </div>
 
             <!-- Heading -->
