--- a/pricing.html
+++ b/pricing.html
@@ -61,7 +61,7 @@
               </a>
               <div class="dropdown-menu dropdown-menu-md" aria-labelledby="navbarDocumentation">
                 <div class="list-group list-group-flush">
-                  <a class="list-group-item" href="./docs/index.html">
+                  <a class="list-group-item" href="people-linkedin-profile.html">
 
                     <!-- Icon -->
                     <div class="icon icon-sm text-primary">
@@ -84,7 +84,7 @@
                     </div>
 
                   </a>
-                  <a class="list-group-item" href="./docs/alerts.html">
+                  <a class="list-group-item" href="company-linkedin-profile.html">
 
                     <!-- Icon -->
                     <div class="icon icon-sm text-primary">
@@ -107,7 +107,7 @@
                     </div>
 
                   </a>
-                  <a class="list-group-item" href="./docs/changelog.html">
+                  <a class="list-group-item" href="jobs-linkedin-profile.html">
 
                     <!-- Icon -->
                     <div class="icon icon-sm text-primary">
