--- a/pricing.html
+++ b/pricing.html
@@ -141,7 +141,7 @@
             </li>
 
             <li class="nav-item">
-              <a class="nav-link" id="navbarAccount" href="documentation.html">
+              <a class="nav-link" id="navbarAccount" href="#!">
                 Documentation
               </a>
             </li>
@@ -149,7 +149,7 @@
           </ul>
 
           <!-- Button -->
-          <a class="navbar-btn btn btn-sm btn-primary lift ml-auto" href="https://themes.getbootstrap.com/product/landkit/" target="_blank">
+          <a class="navbar-btn btn btn-sm btn-primary lift ml-auto" href="login.html" target="_blank">
             Log in
           </a>
 
@@ -544,7 +544,7 @@
             <!-- List -->
             <ul class="list-unstyled text-muted mb-6 mb-md-8 mb-lg-0">
               <li class="mb-3">
-                <a href="documentation.html" class="text-reset">
+                <a href="#!" class="text-reset">
                   Documentation
                 </a>
               </li>
