--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
           <ul class="navbar-nav ml-auto">
 
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" id="navbarDocumentation" href="linkedin-api.html" aria-haspopup="true" aria-expanded="false">
+              <a class="nav-link dropdown-toggle" id="navbarDocumentation" data-toggle="dropdown" href="#" aria-haspopup="true" aria-expanded="false">
                 Linkedin API
               </a>
               <div class="dropdown-menu dropdown-menu-md" aria-labelledby="navbarDocumentation">
@@ -161,7 +161,7 @@
 
     <!-- WELCOME
     ================================================== -->
-    <section class="pt-8 pb-11 pt-md-9 pb-md-12 py-lg-14 bg-light bg-between" style="background-image: url(assets/img/illustrations/illustration-6-cropped.png), url(assets/img/illustrations/illustration-4-cropped.png);">
+    <section class="pt-8 pb-11 pt-md-9 pb-md-12 py-lg-14 bg-light bg-between" style="background-image: url(./assets/img/illustrations/left.png), url(./assets/img/illustrations/right.png);">
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-12 col-md-10 col-lg-7 text-center" data-aos="fade-up">
@@ -355,7 +355,7 @@
             </p>
 
           <!-- Button -->
-          <a class="navbar-btn btn btn-sm btn-primary lift ml-auto" href="linkedin-api.html">
+          <a class="navbar-btn btn btn-sm btn-primary lift ml-auto" href="people-linkedin-profile.html">
             Learn more
           </a>
                       
@@ -378,7 +378,7 @@
             </p>
 
           <!-- Button -->
-          <a class="navbar-btn btn btn-sm btn-primary lift ml-auto" href="linkedin-api.html">
+          <a class="navbar-btn btn btn-sm btn-primary lift ml-auto" href="people-linkedin-profile.html">
             Learn more
           </a>
 
@@ -567,11 +567,6 @@ response = requests.get(api_endpoint,
                 </a>
               </li>
               <li class="mb-3">
-                <a href="linkedin-api.html" class="text-reset">
-                  Linkedin API
-                </a>
-              </li>
-              <li class="mb-3">
                 <a href="https://nubela.co/blog" class="text-reset">
                   Blog
                 </a>
@@ -596,6 +591,21 @@ response = requests.get(api_endpoint,
               <li class="mb-3">
                 <a href="#!" class="text-reset">
                   Documentation
+                </a>
+              </li>
+              <li class="mb-3">
+                <a href="people-linkedin-profile.html" class="text-reset">
+                  People Linkedin Profile
+                </a>
+              </li>
+              <li class="mb-3">
+                <a href="company-linkedin-profile.html" class="text-reset">
+                  Company Linkedin Profile
+                </a>
+              </li>
+              <li class="mb-3">
+                <a href="jobs-linkedin-profile.html" class="text-reset">
+                  Jobs Linkedin Profile
                 </a>
               </li>
             </ul>
