--- a/jobs-linkedin-profile.html
+++ b/jobs-linkedin-profile.html
@@ -56,7 +56,7 @@
           <ul class="navbar-nav ml-auto">
 
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" id="navbarDocumentation" href="linkedin-api.html" aria-haspopup="true" aria-expanded="false">
+              <a class="nav-link dropdown-toggle" id="navbarDocumentation" data-toggle="dropdown" href="#" aria-haspopup="true" aria-expanded="false">
                 Linkedin API
               </a>
               <div class="dropdown-menu dropdown-menu-md" aria-labelledby="navbarDocumentation">
@@ -525,11 +525,6 @@
                 </a>
               </li>
               <li class="mb-3">
-                <a href="linkedin-api.html" class="text-reset">
-                  Linkedin API
-                </a>
-              </li>
-              <li class="mb-3">
                 <a href="https://nubela.co/blog" class="text-reset">
                   Blog
                 </a>
@@ -554,6 +549,21 @@
               <li class="mb-3">
                 <a href="#!" class="text-reset">
                   Documentation
+                </a>
+              </li>
+              <li class="mb-3">
+                <a href="people-linkedin-profile.html" class="text-reset">
+                  People Linkedin Profile
+                </a>
+              </li>
+              <li class="mb-3">
+                <a href="company-linkedin-profile.html" class="text-reset">
+                  Company Linkedin Profile
+                </a>
+              </li>
+              <li class="mb-3">
+                <a href="jobs-linkedin-profile.html" class="text-reset">
+                  Jobs Linkedin Profile
                 </a>
               </li>
             </ul>
@@ -594,6 +604,15 @@
 
           </div>
         </div> <!-- / .row -->
+        <br>
+
+        <hr>
+        <br>
+
+        <div class="text-center">
+          <p class="caption">Nubela Pte Ltd. All rights reserved.</p>
+        </div>
+
       </div> <!-- / .container -->
     </footer>
 
