update second fold

--- a/index.html
+++ b/index.html
@@ -312,6 +312,21 @@
           </div>
 
         </div> <!-- / .row -->
+
+        <div class="row justify-content-center">
+          <div class="col-12 col-md-10 col-lg-8 text-center">
+
+            <br>
+            <br>
+
+            <!-- Buttons -->
+            <a type="button" class="btn btn-primary btn-md text-center" href="people-linkedin-profile.html">
+              Learn more about People Linkedin Profile
+            </a>      
+
+          </div>
+        </div> <!-- / .row -->        
+
       </div> <!-- / .container -->
     </section>
 
@@ -353,11 +368,6 @@
             <p class="text-muted mb-6 mb-md-0" style="padding-bottom: 32px;">
               Crawl popular websites such as Google or Amazon signed in as real users without Captcha
             </p>
-
-          <!-- Button -->
-          <a class="navbar-btn btn btn-sm btn-primary lift ml-auto" href="people-linkedin-profile.html">
-            Learn more
-          </a>
                       
           </div>
 
@@ -376,11 +386,6 @@
             <p class="text-muted mb-6 mb-md-0" style="padding-bottom: 32px;">
               Crawl the web with 150,000 unique residential IP addresses located around the world
             </p>
-
-          <!-- Button -->
-          <a class="navbar-btn btn btn-sm btn-primary lift ml-auto" href="people-linkedin-profile.html">
-            Learn more
-          </a>
 
           </div>
 
