--- a/people-linkedin-profile.html
+++ b/people-linkedin-profile.html
@@ -36,7 +36,7 @@
 
         <!-- Brand -->
         <a class="navbar-brand" href="index.html">
-          <img src="./assets/img/proxycurl@4x.png" class="navbar-brand-img" alt="proxycurl logo">
+          <img src="./assets/img/Proxycurl-Logotype-Primary@1x.png" class="navbar-brand-img" alt="proxycurl logo">
         </a>
 
         <!-- Toggler -->
@@ -677,7 +677,7 @@ response <span class="text-hl">=</span> requests.<span class="text-python-hl">ge
           <div class="col-12 col-md-4 col-lg-3">
         
             <!-- Brand -->
-            <img src="./assets/img/proxycurl@4x.png" alt="proxycurl logo" class="footer-brand img-fluid mb-2" style="width: auto; height: 64px;">
+            <img src="./assets/img/Proxycurl-Logotype-Primary@1x.png" alt="proxycurl logo" class="footer-brand img-fluid mb-2" style="width: auto; height: 64px;">
 
           </div>
           <div class="col-6 col-md-4 col-lg-2">
