--- a/company-linkedin-profile.html
+++ b/company-linkedin-profile.html
@@ -36,7 +36,7 @@
 
         <!-- Brand -->
         <a class="navbar-brand" href="index.html">
-          <img src="./assets/img/proxycurl@4x.png" class="navbar-brand-img" alt="proxycurl logo">
+          <img src="./assets/img/Proxycurl-Logotype-Primary@1x.png" class="navbar-brand-img" alt="proxycurl logo">
         </a>
 
         <!-- Toggler -->
@@ -161,7 +161,7 @@
 
     <!-- WELCOME
     ================================================== -->
-    <section class="pt-8 pb-11 pt-md-9 pb-md-12 py-lg-14 bg-light bg-between" style="background-image: url(./assets/img/illustrations/non-transparant-company-linkedin-left.png), url(./assets/img/illustrations/non-transparant-company-linkedin-right.png);">
+    <section class="pt-8 pb-11 pt-md-9 pb-md-12 py-lg-14 bg-light bg-between" style="background-image: url(./assets/img/illustrations/company-linkedin-left.png), url(./assets/img/illustrations/company-linkedin-right.png);">
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-12 col-md-10 col-lg-7 text-center" data-aos="fade-up">
@@ -785,7 +785,7 @@ response <span class="text-hl">=</span> requests.<span class="text-python-hl">ge
           <div class="col-12 col-md-4 col-lg-3">
         
             <!-- Brand -->
-            <img src="./assets/img/proxycurl@4x.png" alt="proxycurl logo" class="footer-brand img-fluid mb-2" style="width: auto; height: 64px;">
+            <img src="./assets/img/Proxycurl-Logotype-Primary@1x.png" alt="proxycurl logo" class="footer-brand img-fluid mb-2" style="width: auto; height: 64px;">
 
           </div>
           <div class="col-6 col-md-4 col-lg-2">
