--- a/documentation.html
+++ b/documentation.html
@@ -36,7 +36,7 @@
 
         <!-- Brand -->
         <a class="navbar-brand" href="index.html">
-          <img src="./assets/img/proxycurl@4x.png" class="navbar-brand-img" alt="proxycurl logo">
+          <img src="./assets/img/Proxycurl-Logotype-Primary@1x.png" class="navbar-brand-img" alt="proxycurl logo">
         </a>
 
         <!-- Toggler -->
@@ -56,7 +56,7 @@
           <ul class="navbar-nav ml-auto">
 
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" id="navbarDocumentation" data-toggle="dropdown" href="linkedin-api.html" aria-haspopup="true" aria-expanded="false">
+              <a class="nav-link dropdown-toggle" id="navbarDocumentation" data-toggle="dropdown" href="#" aria-haspopup="true" aria-expanded="false">
                 Linkedin API
               </a>
               <div class="dropdown-menu dropdown-menu-md" aria-labelledby="navbarDocumentation">
@@ -141,7 +141,7 @@
             </li>
 
             <li class="nav-item">
-              <a class="nav-link" id="navbarAccount" href="documentation.html">
+              <a class="nav-link" id="navbarAccount" href="#!">
                 Documentation
               </a>
             </li>
