--- a/index.html
+++ b/index.html
@@ -551,7 +551,7 @@ response = requests.get(api_endpoint,
           <div class="col-12 col-md-4 col-lg-3">
         
             <!-- Brand -->
-            <img src="./assets/img/Proxycurl-Logotype-Primary@1x.png" alt="proxycurl logo" class="footer-brand img-fluid mb-2" style="width: auto; height: 64px;">
+            <img src="./assets/img/Proxycurl-Logotype-Primary@1x.png" alt="proxycurl logo" class="footer-brand img-fluid mb-2">
 
           </div>
           <div class="col-6 col-md-4 col-lg-2">
@@ -574,7 +574,7 @@ response = requests.get(api_endpoint,
                 </a>
               </li>
               <li class="mb-3">
-                <a href="price.html" class="text-reset">
+                <a href="pricing.html" class="text-reset">
                   Pricing
                 </a>
               </li>
