--- a/people-linkedin-profile.html
+++ b/people-linkedin-profile.html
@@ -161,7 +161,7 @@
 
     <!-- WELCOME
     ================================================== -->
-    <section class="pt-8 pb-11 pt-md-9 pb-md-12 py-lg-14 bg-light bg-between" style="background-image: url(./assets/img/illustrations/non-transparant-people-linkedin-left.png), url(./assets/img/illustrations/non-transparant-people-linkedin-right.png);">
+    <section class="pt-8 pb-11 pt-md-9 pb-md-12 py-lg-14 bg-light bg-between" style="background-image: url(./assets/img/illustrations/people-linkedin-left.png), url(./assets/img/illustrations/people-linkedin-right.png);">
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-12 col-md-10 col-lg-7 text-center" data-aos="fade-up">
@@ -677,7 +677,7 @@ response <span class="text-hl">=</span> requests.<span class="text-python-hl">ge
           <div class="col-12 col-md-4 col-lg-3">
         
             <!-- Brand -->
-            <img src="./assets/img/Proxycurl-Logotype-Primary@1x.png" alt="proxycurl logo" class="footer-brand img-fluid mb-2" style="width: auto; height: 64px;">
+            <img src="./assets/img/Proxycurl-Logotype-Primary@1x.png" alt="proxycurl logo" class="footer-brand img-fluid mb-2">
 
           </div>
           <div class="col-6 col-md-4 col-lg-2">
@@ -700,7 +700,7 @@ response <span class="text-hl">=</span> requests.<span class="text-python-hl">ge
                 </a>
               </li>
               <li class="mb-3">
-                <a href="price.html" class="text-reset">
+                <a href="pricing.html" class="text-reset">
                   Pricing
                 </a>
               </li>
