--- a/company-linkedin-profile.html
+++ b/company-linkedin-profile.html
@@ -785,7 +785,7 @@ response <span class="text-hl">=</span> requests.<span class="text-python-hl">ge
           <div class="col-12 col-md-4 col-lg-3">
         
             <!-- Brand -->
-            <img src="./assets/img/Proxycurl-Logotype-Primary@1x.png" alt="proxycurl logo" class="footer-brand img-fluid mb-2" style="width: auto; height: 64px;">
+            <img src="./assets/img/Proxycurl-Logotype-Primary@1x.png" alt="proxycurl logo" class="footer-brand img-fluid mb-2">
 
           </div>
           <div class="col-6 col-md-4 col-lg-2">
@@ -808,7 +808,7 @@ response <span class="text-hl">=</span> requests.<span class="text-python-hl">ge
                 </a>
               </li>
               <li class="mb-3">
-                <a href="price.html" class="text-reset">
+                <a href="pricing.html" class="text-reset">
                   Pricing
                 </a>
               </li>
