--- a/login.html
+++ b/login.html
@@ -62,6 +62,13 @@
 
             </form>
 
+            <!-- Link -->
+            <div class="text-center">
+              <a class="text-muted" href="index.html">
+                Back to homepage
+              </a>
+            </div>            
+
           </div>
         </div> <!-- / .row -->
       </div> <!-- / .container -->
