--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <title>Proxycurl</title>
 
   </head>
+
   <body class="pt-10">
 
     <!-- NAVBAR
@@ -61,6 +62,7 @@
               </a>
               <div class="dropdown-menu dropdown-menu-md" aria-labelledby="navbarDocumentation">
                 <div class="list-group list-group-flush">
+
                   <a class="list-group-item" href="people-linkedin-profile.html">
 
                     <!-- Icon -->
@@ -84,6 +86,7 @@
                     </div>
 
                   </a>
+
                   <a class="list-group-item" href="company-linkedin-profile.html">
 
                     <!-- Icon -->
@@ -107,6 +110,7 @@
                     </div>
 
                   </a>
+
                   <a class="list-group-item" href="jobs-linkedin-profile.html">
 
                     <!-- Icon -->
@@ -130,6 +134,31 @@
                     </div>
 
                   </a>
+
+                  <a class="list-group-item" href="linkdb.html">
+
+                    <!-- Icon -->
+                    <div class="icon icon-sm text-primary">
+                      <i class="neu-db" style="font-size: 24px;"></i>
+                    </div>
+
+                    <!-- Content -->
+                    <div class="ml-4">
+
+                      <!-- Heading -->
+                      <h6 class="font-weight-bold text-uppercase text-primary mb-0">
+                        LinkDB
+                      </h6>
+
+                      <!-- Text -->
+                      <p class="font-size-sm text-gray-700 mb-0">
+                        Database of Linkedin Profiles
+                      </p>
+
+                    </div>
+
+                  </a>
+
                 </div>
               </div>
             </li>
@@ -149,7 +178,7 @@
           </ul>
 
           <!-- Button -->
-          <a class="navbar-btn btn btn-sm btn-primary lift ml-auto" href="login.html" target="_blank">
+          <a class="navbar-btn btn btn-sm btn-primary lift ml-auto" href="login.html">
             Log in
           </a>
 
@@ -610,6 +639,11 @@ response = requests.get(api_endpoint,
                   Jobs Linkedin Profile
                 </a>
               </li>
+              <li class="mb-3">
+                <a href="linkdb.html" class="text-reset">
+                  LinkDB
+                </a>
+              </li>              
             </ul>
 
           </div>
