--- a/people-linkedin-profile.html
+++ b/people-linkedin-profile.html
@@ -31,6 +31,8 @@
 
     <!-- NAVBAR
     ================================================== -->
+    <!-- NAVBAR
+    ================================================== -->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top bg-white border-bottom">
       <div class="container-fluid">
 
@@ -61,6 +63,7 @@
               </a>
               <div class="dropdown-menu dropdown-menu-md" aria-labelledby="navbarDocumentation">
                 <div class="list-group list-group-flush">
+
                   <a class="list-group-item" href="people-linkedin-profile.html">
 
                     <!-- Icon -->
@@ -84,6 +87,7 @@
                     </div>
 
                   </a>
+
                   <a class="list-group-item" href="company-linkedin-profile.html">
 
                     <!-- Icon -->
@@ -107,6 +111,7 @@
                     </div>
 
                   </a>
+
                   <a class="list-group-item" href="jobs-linkedin-profile.html">
 
                     <!-- Icon -->
@@ -130,6 +135,31 @@
                     </div>
 
                   </a>
+
+                  <a class="list-group-item" href="linkdb.html">
+
+                    <!-- Icon -->
+                    <div class="icon icon-sm text-primary">
+                      <i class="neu-db" style="font-size: 24px;"></i>
+                    </div>
+
+                    <!-- Content -->
+                    <div class="ml-4">
+
+                      <!-- Heading -->
+                      <h6 class="font-weight-bold text-uppercase text-primary mb-0">
+                        LinkDB
+                      </h6>
+
+                      <!-- Text -->
+                      <p class="font-size-sm text-gray-700 mb-0">
+                        Database of Linkedin Profiles
+                      </p>
+
+                    </div>
+
+                  </a>
+
                 </div>
               </div>
             </li>
@@ -149,7 +179,7 @@
           </ul>
 
           <!-- Button -->
-          <a class="navbar-btn btn btn-sm btn-primary lift ml-auto" href="login.html" target="_blank">
+          <a class="navbar-btn btn btn-sm btn-primary lift ml-auto" href="login.html">
             Log in
           </a>
 
@@ -736,6 +766,11 @@ response <span class="text-hl">=</span> requests.<span class="text-python-hl">ge
                   Jobs Linkedin Profile
                 </a>
               </li>
+              <li class="mb-3">
+                <a href="linkdb.html" class="text-reset">
+                  LinkDB
+                </a>
+              </li>              
             </ul>
 
           </div>
