--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
 
     <!-- WELCOME
     ================================================== -->
-    <section class="pt-8 pb-11 pt-md-9 pb-md-12 py-lg-14 bg-light bg-between" style="background-image: url(./assets/img/illustrations/left.png), url(./assets/img/illustrations/right.png);">
+    <section class="pt-8 pb-11 pt-md-9 pb-md-12 py-lg-14 bg-light bg-between border-bottom" style="background-image: url(./assets/img/illustrations/left.png), url(./assets/img/illustrations/right.png);">
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-12 col-md-10 col-lg-7 text-center" data-aos="fade-up">
@@ -220,14 +220,6 @@
         </div> <!-- / .row -->
       </div> <!-- / .container -->
     </section>
-
-    <!-- SHAPE
-    ================================================== -->
-    <div class="position-relative">
-      <div class="shape shape-bottom shape-fluid-x svg-shim text-white">
-        <svg viewBox="0 0 2880 48" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M0 48h2880V0h-720C1442.5 52 720 0 720 0H0v48z" fill="currentColor"/></svg>
-      </div>
-    </div>
 
     <!-- LINKEDIN
     ================================================== -->
@@ -348,7 +340,10 @@
             <!-- Buttons -->
             <a type="button" class="btn btn-primary btn-md text-center" href="people-linkedin-profile.html">
               Learn more about People Linkedin Profile
-            </a>      
+            </a>
+            <br>
+            <br>
+            <br>
 
           </div>
         </div> <!-- / .row -->        
@@ -358,7 +353,7 @@
 
     <!-- FEATURES
     ================================================== -->
-    <section class="py-8 py-md-11">
+    <section class="py-8 py-md-11 bg-gray-200">
       <div class="container">
 
         <div class="row justify-content-center">
@@ -382,12 +377,12 @@
           <div class="col-12 col-md-6 col-lg-6">
             <!-- Icon -->
             <div class="icon text-primary mb-3">
-              <i class="neu-scan-barcode" style="font-size: 40px;"></i>
+              <i class="neu-workflow" style="font-size: 40px;"></i>
             </div>
 
             <!-- Heading -->
             <h3>
-              No More Captcha
+              Crawl 1M pages in 1 day
             </h3>
 
             <!-- Text -->
@@ -400,12 +395,12 @@
           <div class="col-12 col-md-6 col-lg-6">
             <!-- Icon -->
             <div class="icon text-primary mb-3">
-              <i class="neu-nat" style="font-size: 40px;"></i>
+              <i class="neu-clock" style="font-size: 40px;"></i>
             </div>
 
             <!-- Heading -->
             <h3>
-              150,000 Residential IP addresses
+              Real-time crawls
             </h3>
 
             <!-- Text -->
@@ -421,7 +416,7 @@
 
     <!-- CONTROL
     ================================================== -->
-    <section class="pt-8 pt-md-11">
+    <section class="pt-8 pt-md-11 border-bottom">
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-12 col-md-10 col-lg-8 text-center">
@@ -461,6 +456,9 @@ response = requests.get(api_endpoint,
                         json=payload,
                         headers=header_dic)</code></pre>
             </div>
+            <br>
+            <br>
+            <br>
 
           </div>
         </div> <!-- / .row -->
@@ -469,7 +467,7 @@ response = requests.get(api_endpoint,
 
     <!-- OUR CUSTOMERS
     ================================================== -->
-    <section class="py-8 py-md-11">
+    <section class="py-8 py-md-11 bg-light">
       <div class="container">
         <div class="row justify-content-center">
 
