--- a/jobs-linkedin-profile.html
+++ b/jobs-linkedin-profile.html
@@ -191,7 +191,7 @@
 
     <!-- WELCOME
     ================================================== -->
-    <section class="pt-8 pb-11 pt-md-9 pb-md-12 py-lg-14 bg-light bg-between" style="background-image: url(./assets/img/illustrations/jobs-linkedin-left.png), url(./assets/img/illustrations/jobs-linkedin-right.png);">
+    <section class="pt-8 pb-11 pt-md-9 pb-md-12 py-lg-14 bg-light bg-between border-bottom" style="background-image: url(./assets/img/illustrations/jobs-linkedin-left.png), url(./assets/img/illustrations/jobs-linkedin-right.png);">
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-12 col-md-10 col-lg-7 text-center" data-aos="fade-up">
@@ -222,14 +222,6 @@
         </div> <!-- / .row -->
       </div> <!-- / .container -->
     </section>
-
-    <!-- SHAPE
-    ================================================== -->
-    <div class="position-relative">
-      <div class="shape shape-bottom shape-fluid-x svg-shim text-white">
-        <svg viewBox="0 0 2880 48" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M0 48h2880V0h-720C1442.5 52 720 0 720 0H0v48z" fill="currentColor"/></svg>
-      </div>
-    </div>
 
     <!-- CONTENT
     ================================================== -->
@@ -381,7 +373,7 @@ response <span class="text-hl">=</span> requests.<span class="text-python-hl">ge
 
     <!-- Job Posted
     ================================================= -->
-    <section class="pt-8 pt-md-11 pb-8 pb-md-14">
+    <section class="pt-8 pt-md-11 pb-8 pb-md-14 bg-gray-200">
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-12 col-md-10 col-lg-8 text-center">
@@ -712,12 +704,16 @@ response <span class="text-hl">=</span> requests.<span class="text-python-hl">ge
 
           </div>
         </div> <!-- / .row -->
+        <br>
+        <br>
+        <br>
+        
       </div> <!-- / .container -->
     </section> 
 
     <!-- OUR CUSTOMERS
     ================================================== -->
-    <section class="py-8 py-md-11">
+    <section class="py-8 py-md-11 bg-light">
       <div class="container">
         <div class="row justify-content-center">
 
