--- a/people-linkedin-profile.html
+++ b/people-linkedin-profile.html
@@ -608,12 +608,16 @@ response <span class="text-hl">=</span> requests.<span class="text-python-hl">ge
 
           </div>
         </div> <!-- / .row -->
+        <br>
+        <br>
+        <br>
+
       </div> <!-- / .container -->
     </section> 
 
     <!-- OUR CUSTOMERS
     ================================================== -->
-    <section class="py-8 py-md-11">
+    <section class="py-8 py-md-11 bg-light">
       <div class="container">
         <div class="row justify-content-center">
 
