--- a/linkdb.html
+++ b/linkdb.html
@@ -190,7 +190,7 @@
 
     <!-- WELCOME
     ================================================== -->
-    <section class="pt-8 pb-11 pt-md-9 pb-md-12 py-lg-14 bg-light bg-between" style="background-image: url(./assets/img/illustrations/linkdb-left.png), url(./assets/img/illustrations/linkdb-right.png);">
+    <section class="pt-8 pb-11 pt-md-9 pb-md-12 py-lg-14 bg-light bg-between border-bottom" style="background-image: url(./assets/img/illustrations/linkdb-left.png), url(./assets/img/illustrations/linkdb-right.png);">
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-12 col-md-10 col-lg-7 text-center" data-aos="fade-up">
@@ -226,7 +226,7 @@
     </section>
 
     <!--ENTIRE-->
-    <section class="py-8 py-md-11">
+    <section class="py-8 py-md-11 border-bottom">
       <div class="container">
 
         <div class="row justify-content-center">
@@ -352,7 +352,7 @@
 
     <!-- 3RD FOLD
     ================================================== -->
-    <section class="py-8 py-md-11">
+    <section class="py-8 py-md-11 bg-gray-200">
       <div class="container">     
 
         <div class="row align-items-center">
