--- a/people-linkedin-profile.html
+++ b/people-linkedin-profile.html
@@ -191,7 +191,7 @@
 
     <!-- WELCOME
     ================================================== -->
-    <section class="pt-8 pb-11 pt-md-9 pb-md-12 py-lg-14 bg-light bg-between" style="background-image: url(./assets/img/illustrations/people-linkedin-left.png), url(./assets/img/illustrations/people-linkedin-right.png);">
+    <section class="pt-8 pb-11 pt-md-9 pb-md-12 py-lg-14 bg-light bg-between border-bottom" style="background-image: url(./assets/img/illustrations/people-linkedin-left.png), url(./assets/img/illustrations/people-linkedin-right.png);">
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-12 col-md-10 col-lg-7 text-center" data-aos="fade-up">
@@ -223,14 +223,6 @@
         </div> <!-- / .row -->
       </div> <!-- / .container -->
     </section>
-
-    <!-- SHAPE
-    ================================================== -->
-    <div class="position-relative">
-      <div class="shape shape-bottom shape-fluid-x svg-shim text-white">
-        <svg viewBox="0 0 2880 48" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M0 48h2880V0h-720C1442.5 52 720 0 720 0H0v48z" fill="currentColor"/></svg>
-      </div>
-    </div>
 
     <!-- CONTENT
     ================================================== -->
