--- a/index.html
+++ b/index.html
@@ -387,7 +387,7 @@
 
             <!-- Text -->
             <p class="text-muted mb-6 mb-md-0" style="padding-bottom: 32px;">
-              Crawl popular websites such as Google or Amazon signed in as real users without Captcha
+              Proxycurl scales trivially. Make more API requests concurrently to scrape more pages
             </p>
                       
           </div>
@@ -405,7 +405,7 @@
 
             <!-- Text -->
             <p class="text-muted mb-6 mb-md-0" style="padding-bottom: 32px;">
-              Crawl the web with 150,000 unique residential IP addresses located around the world
+              Proxycurl scales trivially. Make more API requests concurrently to scrape more pages
             </p>
 
           </div>
