--- a/linkdb.html
+++ b/linkdb.html
@@ -195,6 +195,9 @@
         <div class="row justify-content-center">
           <div class="col-12 col-md-10 col-lg-7 text-center" data-aos="fade-up">
             
+            <br>
+            <br>
+            <br>
             <!-- Heading -->
             <h1 class="display-2 font-weight-bold">
               <span class="text-primary">Power your product</span> with a database of Linkedin profiles
@@ -522,7 +525,8 @@ response <span class="text-hl">=</span> requests.<span class="text-python-hl">ge
   
               <!-- Heading -->
               <p>
-                "Find me everyone who studied Computer Science in Stanford"
+                "Find me everyone who studied<br>
+                Computer Science in Stanford"
               </p>
   
             </div>            
