--- a/api-key.html
+++ b/api-key.html
@@ -178,7 +178,12 @@
 
                   </div>
 
-                  <div class="col-auto">
+                  <div class="col-md-6">
+                    <p class="small font-weight-bold mb-0">1 Credit per API request</p>
+                    <p class="small font-weight-bold mb-2">2 Credits per row of data in LinkDB</p>
+                  </div>
+
+                  <div class="col-md-6">
                     <a href="pricing.html" type="button" class="top-up-btn btn btn-block btn-primary">
                     Upgrade plan to added more credits
                     </a>
