--- a/billing-plans-and-payment.html
+++ b/billing-plans-and-payment.html
@@ -143,13 +143,13 @@
       
                   <div class="card-body bg-light border rounded mb-0">
 
-                    <span class="badge badge-pill badge-info-soft mb-3">
+                    <span class="badge badge-pill badge-black-soft mb-3">
                     <span class="h6 text-uppercase font-weight-bold">Lite</span>
                     </span>   
 
                     <!-- Price -->
                     <span class="p mx-2 font-weight-bold">
-                      $9.9/mo
+                      $9.9/mo (paid monthly)
                     </span>    
 
                     <h5 class="mb-0">Payment due Oct 10, 2020</h5>
@@ -263,7 +263,7 @@
                       <div class="col-auto">
 
                         <!-- Icon -->
-                        <img class="img-fluid" src="assets/img/icons/payment-methods/visa.svg" alt="..." style="max-width: 40px;">
+                        <img class="img-fluid" src="assets/img/icons/payment-methods/visa.svg" alt="logo" style="max-width: 40px;">
 
                       </div>
                       <div class="col ml-n5">
@@ -295,9 +295,7 @@
                             <i class="fe fe-more-vertical"></i>
                           </a>
                           <div class="dropdown-menu">
-                            <a class="dropdown-item" href="#">Action</a>
-                            <a class="dropdown-item" href="#">Another action</a>
-                            <a class="dropdown-item" href="#">Something else here</a>
+                            <a class="dropdown-item" href="#">Remove card</a>
                           </div>
                         </div>
 
@@ -309,7 +307,7 @@
                       <div class="col-auto">
 
                         <!-- Icon -->
-                        <img class="img-fluid" src="assets/img/icons/payment-methods/mastercard.svg" alt="..." style="max-width: 40px;">
+                        <img class="img-fluid" src="assets/img/icons/payment-methods/mastercard.svg" alt="logo" style="max-width: 40px;">
 
                       </div>
                       <div class="col ml-n5">
@@ -333,9 +331,8 @@
                             <i class="fe fe-more-vertical"></i>
                           </a>
                           <div class="dropdown-menu">
-                            <a class="dropdown-item" href="#">Action</a>
-                            <a class="dropdown-item" href="#">Another action</a>
-                            <a class="dropdown-item" href="#">Something else here</a>
+                            <a class="dropdown-item" href="#">Make primary</a>
+                            <a class="dropdown-item" href="#">Remove card</a>
                           </div>
                         </div>
 
