--- a/pricing.html
+++ b/pricing.html
@@ -297,7 +297,7 @@
                 </div>  
 
                 <!-- Button -->
-                <a href="./pick-plan.html" class="btn btn-block btn-primary-soft mt-4">
+                <a href="#!" class="btn btn-block btn-primary-soft mt-4">
                   Pick Plan <i class="fe fe-arrow-right ml-3"></i>
                 </a>
 
@@ -383,7 +383,7 @@
             </div>
 
             <!-- Button -->
-            <a href="./pick-plan.html" class="btn btn-block btn-primary-soft mt-4">
+            <a href="#!" class="btn btn-block btn-primary-soft mt-4">
               Pick Plan <i class="fe fe-arrow-right ml-3"></i>
             </a>
 
@@ -477,7 +477,7 @@
             </div>
 
             <!-- Button -->
-            <a href="./pick-plan.html" class="btn btn-block btn-white mt-4">
+            <a href="#!" class="btn btn-block btn-white mt-4">
               Pick Plan <i class="fe fe-arrow-right ml-3"></i>
             </a>
 
@@ -571,7 +571,7 @@
             </div>
 
             <!-- Button -->
-            <a href="./pick-plan.html" class="btn btn-block btn-primary-soft mt-4">
+            <a href="#!" class="btn btn-block btn-primary-soft mt-4">
               Pick Plan <i class="fe fe-arrow-right ml-3"></i>
             </a>
 
